--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,9 @@
   <script src="js/comment-list.component.js"></script>
   <script src="js/comment.component.js"></script>
   <script src="js/comment-box.component.js"></script>
+  <script src="js/reply-inputs.component.js"></script>
   <script src="js/comment-system.component.js"></script>
+  <script src="js/comment-and-replies.component.js"></script>
 </head>
 
 <body ng-app="commentsShowcaseApp">
