Use Promises, delays and flat data

--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,8 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/angular/angular.js"></script>
-  <script src="js/index.js"></script>
+  <script src="app.module.js"></script>
   <script src="js/comments-storage.service.js"></script>
-  <script src="js/comments-manipulator.service.js"></script>
   <script src="js/comment-list.component.js"></script>
   <script src="js/comment.component.js"></script>
   <script src="js/comment-box.component.js"></script>
