Refactor and add tests

--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,18 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="app.module.js"></script>
   <script src="js/comments-storage.service.js"></script>
-  <script src="js/comment-list.component.js"></script>
+  <script src="js/comments-data-manager.service.js"></script>
+  <script src="js/comments-system.component.js"></script>
+  <script src="js/comments-list.component.js"></script>
   <script src="js/comment.component.js"></script>
   <script src="js/comment-box.component.js"></script>
   <script src="js/reply-inputs.component.js"></script>
-  <script src="js/comment-system.component.js"></script>
   <script src="js/comment-and-replies.component.js"></script>
 </head>
 
 <body ng-app="commentsShowcaseApp">
   
-  <comment-system></comment-system>
+  <comments-system></comments-system>
 
 </body>
 </html>
